<resources>
    <string name="app_name">ПОЧТА О</string>
    <string name="log_in_button">Войти</string>
    <string name="sign_up_button">Создать учетную запись</string>
    <string name="welcome_text">Добро пожаловать в ПОЧТА О!</string>
    <string name="login_header">Войти в приложение ПОЧТА О</string>
    <string name="email">Email-адрес</string>
    <string name="wrong_email">Неверный Email-адрес</string>
    <string name="password">Пароль</string>
    <string name="wrong_password">Введите правильный пароль</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="username">Имя пользователя</string>
    <string name="no_internet_connection">Нет подключения к интернету!</string>
    <string name="login_failed_toast">Не удалось войти в приложение</string>
    <string name="nav_header_desc">Изображение профиля</string>
    <string name="nav_header_title">Имя пользователя</string>
    <string name="nav_header_subtitle">Email-адрес</string>
    <string name="menu_home">Мои письма</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_about">О приложении</string>
    <string name="navigation_drawer_open">Откройте меню</string>
    <string name="navigation_drawer_close">Закройте меню</string>
    <string name="mailbox_name">Название письма</string>
    <string name="battery">Батарея:</string>
    <string name="click_to_show_delivery_dates">Нажмите, чтобы увидеть даты получения письма</string>
    <string name="logout">Выйти</string>
    <string name="register_header">Зарегистрироваться в приложении</string>
    <string name="wrong_repeat_password">Неправильная проверка пароля</string>
    <string name="repeat_password">Повтор пароля</string>
    <string name="wrong_username">Неверное имя пользователя</string>
    <string name="register_failed_toast">Не удалось зарегистрироваться в приложении!</string>
    <string name="register_success_title">Зарегистрировать пользователя</string>
    <string name="register_success_message">На указанный адрес электронной почты была отправлена ссылка на запись. Активируйте учётную запись для входа в систему</string>
    <string name="add_mailbox_header">Добавить новые письма</string>
    <string name="mailbox_username">Имя пользователя письма</string>
    <string name="mailbox_password">Пароль письма</string>
    <string name="wrong_mailbox_name">Неверное имя пользователя письма</string>
    <string name="add_mailbox_button">Добавить кнопку письма</string>
    <string name="add_mailbox_description">Чтобы добавить письма, введите имя пользователя и пароль на устройстве. Кроме того, введите имя вашего письма</string>
    <string name="no_token">Не удалось аутентифицировать пользователя. Выход из приложения</string>
    <string name="delete_mailbox">Удалить письмо</string>
    <string name="recieved">"Получено:%s"</string>
    <string name="mail_dates_history">Дать получения писем</string>
    <string name="application_info">Приложение ПОЧТА О - приложения для обменя сообщениями между пользователями почты</string>
    <string name="show_notifications">Показывать уведомления о новом списке</string>
    <string name="change_email">Изменить Email</string>
    <string name="change">изменить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="old_email">Текущий email-адрес</string>
    <string name="mailbox_new_email">Новый email-адрес</string>
    <string name="repeat_new_email">Повторить новый email-адрес</string>
    <string name="wrong_repeat_email">Неверная проверка email-адреса</string>
    <string name="old_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_new_password">Повторить новый пароль</string>
    <string name="change_password_success">Пароль успешно изменен!</string>
    <string name="change_email_success">Адрес email успешно изменен!</string>
    <string name="new_letter_recieved">Пришло новое письмо</string>
    <string name="notice">Рекомендательное письмо</string>
    <string name="battery_value">%s %%</string>
    <string name="error_code">"Код ошибки: "</string>
    <string name="add_mailbox_failed_toast">Не удалось добавить письмо!</string>
    <string name="change_email_failure">Не удалось изменить email-адрес!</string>
    <string name="change_password_failure">Не удалось изменить пароль!</string>


</resources>