<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_mail"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_24"
            android:title="@string/menu_about" />
    </group>


    <item android:title="Другое">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>