<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mailbox.home.AddMailboxActivity"
    android:background="@color/blue_light">


    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/color_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/add_mailbox_description"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/mailbox_username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <TextView
            android:id="@+id/textViewWrongUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/wrong_username"
            android:textColor="@color/error_input"
            android:textSize="12sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextMailboxPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/mailbox_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <TextView
            android:id="@+id/textViewWrongMailboxPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/wrong_password"
            android:textColor="@color/error_input"
            android:textSize="12sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <TextView
            android:id="@+id/textViewWrongMailboxRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/wrong_repeat_password"
            android:textColor="@color/error_input"
            android:textSize="12sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextMailboxName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/mailbox_name"
            android:inputType="textShortMessage"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <TextView
            android:id="@+id/textViewWrongMailboxName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/wrong_mailbox_name"
            android:textColor="@color/error_input"
            android:textSize="12sp"
            android:visibility="gone" />


        <Button
            android:id="@+id/addMailboxButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/color_700"
            android:onClick="addMailboxOnClick"
            android:text="@string/add_mailbox_button"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="2dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>