<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.main.MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/color_700"
        android:onClick="loginOnClick"
        android:text="@string/log_in_button"
        app:layout_constraintBottom_toTopOf="@+id/SignupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/color_700"
        android:onClick="signupOnClick"
        android:text="@string/sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon_simple_foreground" />
</androidx.constraintlayout.widget.ConstraintLayout>