<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mailbox.profile.ProfileFragment"
    android:background="@color/blue_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/show_notifications"
                android:textColor="@color/black"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_weight="1"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/showNotificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:checked="true"
                android:padding="3dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_email"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/changeEmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:layout_weight="3"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Изменить пароль"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Изменить"
                android:layout_weight="3"
                />

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>